@@ -1,3 +1,4 @@
+    - optimized for loops with count() function calls (monte)
     - add month_value_format attribute to html_select_date
       plugin (Gary Loescher, Monte) 
     - made it possible to use simple variables inside [] for
